--- a/_config.yml
+++ b/_config.yml
@@ -5,3 +5,13 @@ defaults:
 
     values:
       layout: default
+
+  -
+    scope:
+      path: ''
+      type: posts
+
+    values:
+      layout: gig
+
+permalink: pretty
