--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,8 +11,8 @@
 #    - title: Sam
 #      path: /the-band/sam/
 
-- title: Sounds
-  path: /sounds/
+#- title: Sounds
+#  path: /sounds/
 
 #- title: Pictures
 #  path: /pictures/
