--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -11,11 +11,11 @@
 #    - title: Sam
 #      path: /the-band/sam/
 
-#- title: Sounds
-#  path: /sounds/
+- title: Sounds
+  path: /sounds/
 
-#- title: Pictures
-#  path: /pictures/
+- title: Pictures
+  path: /pictures/
 
 - title: Gigs
   path: /gigs/
