--- a/_data/links.yml
+++ b/_data/links.yml
@@ -1,5 +1,5 @@
 - title: Twitter
-  url: http://twitter.com/uncookedfunk
+  url: https://twitter.com/uncookedfunk
 - title: Facebook
   url: https://www.facebook.com/rawfunkmaharishi
 - title: Soundcloud
