--- a/_data/links.yml
+++ b/_data/links.yml
@@ -4,3 +4,5 @@
   url: https://www.facebook.com/rawfunkmaharishi
 - title: Soundcloud
   url: https://soundcloud.com/rawfunkmaharishi
+- title: Github
+  url: https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io
