--- a/_data/sounds.yml
+++ b/_data/sounds.yml
@@ -6,3 +6,12 @@
 
 - title: Beer Of Course But Why?
   id: 160530869
+
+- title: Aquamarine
+  id: 132829451
+
+- title: Siren
+  id: 160530965
+
+- title: Junalbandi
+  id: 156724180
