--- a/gigs/_posts/2014-10-22-the-comedy.yml
+++ b/gigs/_posts/2014-10-22-the-comedy.yml
@@ -4,4 +4,7 @@ facebook_id: 665139010267550
 time: '20:00'
 osm_map: http://www.openstreetmap.org/export/embed.html?bbox=-0.13479173183441162%2C51.508699054537175%2C-0.12928783893585205%2C51.51087255582464&amp;layer=mapnik&amp;marker=51.50978581814237%2C-0.13203978538513184
 osm_link: http://www.openstreetmap.org/?mlat=51.50979&amp;mlon=-0.13204#map=18/51.50979/-0.13204
+lat_long:
+  - -0.13204
+  - 51.50979
 ---
