--- a/gigs/_posts/2014-10-22-the-comedy.yml
+++ b/gigs/_posts/2014-10-22-the-comedy.yml
@@ -1,8 +1,8 @@
 ---
 location:    The Comedy, Oxendon St, SW1
-facebook_id: 665139010267550
 time:        '20:00'
-price:       '£6'
+price:       £6
+facebook_id: 665139010267550
 latitude:    51.50979
 longitude:   -0.13204
 ---
