--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,8 +4,8 @@
 - title: Sounds
   path: /sounds/
 
-#- title: Pictures
-#  path: /pictures/
+- title: Pictures
+  path: /pictures/
 
 - title: Videos
   path: /videos/
