--- a/_data/videos.yml
+++ b/_data/videos.yml
@@ -1,5 +1,5 @@
 - title: Trapped In Hawaii
-  id: CLEcnT-3eMg
+  id: 9Gi6-sB1ku8
 
 - title: Discotheque Metamorphosis
-  id: mS-NlJNmiGs
+  id: TyTLtJ31WYw
