--- a/_data/sounds.yml
+++ b/_data/sounds.yml
@@ -1,6 +1,12 @@
 - title: Old Cotsold Legbar
   id: 173701811
 
+- title: Carpet Burns
+  id: 174065282
+
+- title: Funx Taxi Berlin
+  id: 174065916
+
 - title: Trapped In Hawaii
   id: 162634747
 
