--- a/_data/pictures.yml
+++ b/_data/pictures.yml
@@ -1,65 +1,65 @@
 ---
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15011139813/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm4.staticflickr.com/3956/15011139813_24453e4922_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15628658301/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm6.staticflickr.com/5609/15628658301_16132cf4ff_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631338195/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm6.staticflickr.com/5606/15631338195_1dce26279b_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15632187102/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm4.staticflickr.com/3935/15632187102_245b50a92f_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15607642076/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm6.staticflickr.com/5611/15607642076_f358eb9331_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445769330/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm4.staticflickr.com/3937/15445769330_df00451025_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445376017/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm6.staticflickr.com/5602/15445376017_594364f209_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631479625/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm4.staticflickr.com/3933/15631479625_b6168ee903_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445493727/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm4.staticflickr.com/3953/15445493727_118b0a436b_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445504487/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm4.staticflickr.com/3956/15445504487_2b11ee4c80_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444839959/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm6.staticflickr.com/5598/15444839959_787064e003_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15607756696/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm6.staticflickr.com/5601/15607756696_ff8fb1e61e_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444724049/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm4.staticflickr.com/3946/15444724049_1281b5890a_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445789720/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm6.staticflickr.com/5616/15445789720_89fdbc98a6_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15011213833/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm6.staticflickr.com/5612/15011213833_3d7c10b42d_m.jpg
-  :photographer: kim
-- :photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15010630514/
-  :title: The Comedy, October 2014
-  :photo_url: https://farm6.staticflickr.com/5602/15010630514_0e44c0dfc4_m.jpg
-  :photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15011139813/
+  title: The Comedy, October 2014
+  photo_url: https://farm4.staticflickr.com/3956/15011139813_24453e4922_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15628658301/
+  title: The Comedy, October 2014
+  photo_url: https://farm6.staticflickr.com/5609/15628658301_16132cf4ff_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631338195/
+  title: The Comedy, October 2014
+  photo_url: https://farm6.staticflickr.com/5606/15631338195_1dce26279b_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15632187102/
+  title: The Comedy, October 2014
+  photo_url: https://farm4.staticflickr.com/3935/15632187102_245b50a92f_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15607642076/
+  title: The Comedy, October 2014
+  photo_url: https://farm6.staticflickr.com/5611/15607642076_f358eb9331_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445769330/
+  title: The Comedy, October 2014
+  photo_url: https://farm4.staticflickr.com/3937/15445769330_df00451025_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445376017/
+  title: The Comedy, October 2014
+  photo_url: https://farm6.staticflickr.com/5602/15445376017_594364f209_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631479625/
+  title: The Comedy, October 2014
+  photo_url: https://farm4.staticflickr.com/3933/15631479625_b6168ee903_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445493727/
+  title: The Comedy, October 2014
+  photo_url: https://farm4.staticflickr.com/3953/15445493727_118b0a436b_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445504487/
+  title: The Comedy, October 2014
+  photo_url: https://farm4.staticflickr.com/3956/15445504487_2b11ee4c80_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444839959/
+  title: The Comedy, October 2014
+  photo_url: https://farm6.staticflickr.com/5598/15444839959_787064e003_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15607756696/
+  title: The Comedy, October 2014
+  photo_url: https://farm6.staticflickr.com/5601/15607756696_ff8fb1e61e_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444724049/
+  title: The Comedy, October 2014
+  photo_url: https://farm4.staticflickr.com/3946/15444724049_1281b5890a_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445789720/
+  title: The Comedy, October 2014
+  photo_url: https://farm6.staticflickr.com/5616/15445789720_89fdbc98a6_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15011213833/
+  title: The Comedy, October 2014
+  photo_url: https://farm6.staticflickr.com/5612/15011213833_3d7c10b42d_m.jpg
+  photographer: kim
+- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15010630514/
+  title: The Comedy, October 2014
+  photo_url: https://farm6.staticflickr.com/5602/15010630514_0e44c0dfc4_m.jpg
+  photographer: kim
