--- a/_data/sounds.yml
+++ b/_data/sounds.yml
@@ -1,6 +1,8 @@
-- title: Old Cotsold Legbar
+# Featured track
+- title: Old Cotwold Legbar
   id: 173701811
 
+# Four to the right
 - title: Carpet Burns
   id: 174065282
 
@@ -13,6 +15,7 @@
 - title: Safety On Board
   id: 160530841
 
+# Four along the bottom
 - title: Beer Of Course But Why?
   id: 160530869
 
