Now with FB event

--- a/gigs/_posts/2014-12-04-buffalo-bar.yml
+++ b/gigs/_posts/2014-12-04-buffalo-bar.yml
@@ -1,6 +1,7 @@
 ---
-location:  259 Upper St, London, N1
-time:      '20:30'
-latitude:  51.5461216
-longitude: -0.1032551
+location:    259 Upper St, London, N1
+time:        '20:30'
+facebook_id: 1554796168085840
+latitude:    51.5461216
+longitude:   -0.1032551
 ---
