--- a/_data/sounds.yml
+++ b/_data/sounds.yml
@@ -3,17 +3,17 @@
   id: 173701811
 
 # Four to the right
+- title: Safety On Board
+  id: 174628735
+
 - title: Carpet Burns
   id: 174065282
 
-- title: Funx Taxi Berlin
+- title: Funk Taxi Berlin
   id: 174065916
 
-- title: Trapped In Hawaii
-  id: 162634747
-
-- title: Safety On Board
-  id: 160530841
+- title: Junalbandi
+  id: 174627970
 
 # Four along the bottom
 - title: Beer Of Course But Why?
@@ -25,5 +25,5 @@
 - title: Siren
   id: 160530965
 
-- title: Junalbandi
-  id: 156724180
+- title: Trapped In Hawaii
+  id: 162634747
