Sam is now Purdie

--- a/_data/band.yml
+++ b/_data/band.yml
@@ -9,6 +9,6 @@
   image_caption: James Jamerson, by Wikipedia user Experimento69. CC BY-SA 3.0
 
 - name:          Sam
-  image:         gadd.jpg
+  image:         purdie.jpg
   instrument:    Drums
-  image_caption: Steve Gadd, by Wikipedia user Stiopa. CC BY-SA 3.0
+  image_caption: Bernard Purdie, by Flickr user Geoff Bosco. CC BY 2.0
