--- a/gigs/_posts/2015-03-20-new-cross-inn.yml
+++ b/gigs/_posts/2015-03-20-new-cross-inn.yml
@@ -1,7 +1,8 @@
 ---
-location:  New Cross Inn Hostel, 323A New Cross Rd, SE14
-time:      '20:00'
-price:     £4
-latitude:  51.475746
-longitude: -0.03733
+location:    New Cross Inn Hostel, 323A New Cross Rd, SE14
+time:        '20:00'
+price:       £4
+latitude:    51.475746
+longitude:   -0.03733
+facebook_id: 661854860607321
 ---
