--- a/_data/band.yml
+++ b/_data/band.yml
@@ -2,13 +2,16 @@
   image:         scofield.jpg
   instrument:    Guitar
   image_caption: John Scofield, by Wikipedia user nomo. CC BY-SA 2.5
+  image_url:     http://commons.wikimedia.org/wiki/File:John-scofield.jpg
 
 - name:          Matt
   image:         jamerson.jpg
   instrument:    Bass
   image_caption: James Jamerson, by Wikipedia user Experimento69. CC BY-SA 3.0
+  image_url:     http://en.wikipedia.org/wiki/James_Jamerson#mediaviewer/File:James_Jamerson.jpeg
 
 - name:          Sam
   image:         purdie.jpg
   instrument:    Drums
   image_caption: Bernard Purdie, by Flickr user Geoff Bosco. CC BY 2.0
+  image_url:     https://www.flickr.com/photos/109434304@N07/16072593055/
