--- a/_data/band.yml
+++ b/_data/band.yml
@@ -15,3 +15,4 @@
   instrument:    Drums
   image_caption: Bernard Purdie, by Flickr user Geoff Bosco. CC BY 2.0
   image_url:     https://www.flickr.com/photos/109434304@N07/16072593055/
+  twitter:       pikesley
