--- a/_data/reviews.yml
+++ b/_data/reviews.yml
@@ -1,2 +1,5 @@
 - quote:  'You remind me of Steely Dan without the vocals'
   source: Singer/keyboard player from <a href='https://twitter.com/dwt_music'>DWT</a>
+
+- quote:  'Ambient Jazz-Funk'
+  source: Kitty, Sam's girlfriend
