Maybe this will force it

--- a/_data/reviews.yml
+++ b/_data/reviews.yml
@@ -2,4 +2,4 @@
   source: Singer/keyboard player from <a href='https://twitter.com/dwt_music'>DWT</a>
 
 - quote:  'Ambient Jazz-Funk'
-  source: Kitty, Sam's girlfriend
+  source: Kitty, <a href='http://sam.pikesley.org/'>Sam</a>'s girlfriend
