--- a/_data/reviews.yml
+++ b/_data/reviews.yml
@@ -1,6 +1,5 @@
 - quote:    You remind me of Steely Dan without the vocals
-  source:   Singer/keyboard player from <a href='https://twitter.com/dwt_music'>DWT</a>
-  occasion: After our <a href='http://rawfunkmaharishi.uk/gigs/2015/01/15/nambucca/'>Nambucca show</a>
+  source:   Singer/keyboard player from <a href='https://twitter.com/dwt_music'>DWT</a>, after our <a href='http://rawfunkmaharishi.uk/gigs/2015/01/15/nambucca/'>Nambucca show</a>
 
 - quote:    Ambient Jazz-Funk
   source:   Kitty, <a href='http://sam.pikesley.org/'>Sam</a>'s girlfriend
