--- a/_data/sounds.yml
+++ b/_data/sounds.yml
@@ -1,8 +1,11 @@
 # Featured track
+- title: Bernard
+  id:    192841052
+
+# Four to the right
 - title: Jessica's Cousin
   id:    191308336
 
-# Four to the right
 - title: Old Cotswold Legbar
   id:    191432275
 
@@ -12,10 +15,10 @@
 - title: Safety On Board
   id:    174628735
 
+# Four along the bottom
 - title: Junalbandi
   id:    191457025
 
-# Four along the bottom
 - title: Carpet Burns
   id:    174065282
 
@@ -25,10 +28,10 @@
 - title: Beer Of Course But Why?
   id:    160530869
 
+# Sorry, you will not currently be shown
 - title: Aquamarine
   id:    132829451
 
-# Sorry, you will not currently be shown
 - title: Siren
   id:    160530965
 
