--- a/_data/sounds.yml
+++ b/_data/sounds.yml
@@ -1,39 +1,68 @@
 # Featured track
-- title: Bernard
-  id:    192841052
+- title:    Bernard
+  id:       192841052
+  location: Islington Academy
+  date:     '2015-02-18'
 
 # Four to the right
-- title: Jessica's Cousin
-  id:    191308336
+- title:    Junalbandi
+  id:       193005357
+  location: Islington Academy
+  date:     '2015-02-18'
 
-- title: Old Cotswold Legbar
-  id:    191432275
+- title:    Beer Of Course But Why?
+  id:       193006525
+  location: Islington Academy
+  date:     '2015-02-18'
 
-- title: Not Bernard
-  id:    190803089
+- title:    Hexaflexagon
+  id:       193008299
+  location: Islington Academy
+  date:     '2015-02-18'
 
-- title: Safety On Board
-  id:    174628735
+- title:    Jessica's Cousin
+  id:       191308336
+  location: Rogue Studios
+  date:     '2015-02-11'
 
 # Four along the bottom
-- title: Junalbandi
-  id:    191457025
+- title:    Old Cotswold Legbar
+  id:       191432275
+  location: Rogue Studios
+  date:     '2015-02-11'
 
-- title: Carpet Burns
-  id:    174065282
+- title:    Not Bernard
+  id:       190803089
+  location: Rogue Studios
+  date:     '2015-02-11'
 
-- title: Funk Taxi Berlin
-  id:    174065916
+- title:    Safety On Board
+  id:       174628735
+  location: Enterprise Studios
+  date:     '2014-10-14'
 
-- title: Beer Of Course But Why?
-  id:    160530869
+- title:    Funk Taxi Berlin
+  id:       174065916
+  location: Enterprise Studios
+  date:     '2014-10-14'
 
 # Sorry, you will not currently be shown
-- title: Aquamarine
-  id:    132829451
+- title:    Aquamarine
+  id:       132829451
+  location: Unknown
+  date:     '1970-01-01'
 
-- title: Siren
-  id:    160530965
+- title:    Siren
+  id:       160530965
+  location: Unknown
+  date:     '1970-01-01'
 
-- title: Trapped In Hawaii
-  id:    162634747
+- title:    Trapped In Hawaii
+  id:       162634747
+  location: Unknown
+  date:     '1970-01-01'
+
+- title:    Carpet Burns
+  id:       174065282
+  location: Unknown
+  date:     '1970-01-01'
