--- a/_data/sounds.yml
+++ b/_data/sounds.yml
@@ -1,68 +1,86 @@
 # Featured track
-- title:    Bernard
-  id:       192841052
-  location: Islington Academy
-  date:     '2015-02-18'
+- title:       Bernard
+  id:          192841052
+  location:    Islington Academy
+  date:        '2015-02-18'
+  license:     Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
 # Four to the right
-- title:    Junalbandi
-  id:       193005357
-  location: Islington Academy
-  date:     '2015-02-18'
+- title:       Junalbandi
+  id:          193005357
+  location:    Islington Academy
+  date:        '2015-02-18'
+  license:     Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
-- title:    Beer Of Course But Why?
-  id:       193006525
-  location: Islington Academy
-  date:     '2015-02-18'
+- title:       Beer Of Course But Why?
+  id:          193006525
+  location:    Islington Academy
+  date:        '2015-02-18'
+  license:     Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
-- title:    Hexaflexagon
-  id:       193008299
-  location: Islington Academy
-  date:     '2015-02-18'
+- title:       Hexaflexagon
+  id:          193008299
+  location:    Islington Academy
+  date:        '2015-02-18'
+  license:     Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
-- title:    Jessica's Cousin
-  id:       191308336
-  location: Rogue Studios
-  date:     '2015-02-11'
+- title:       Jessica's Cousin
+  id:          191308336
+  location:    Rogue Studios
+  date:        '2015-02-11'
+  license:     Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
 # Four along the bottom
-- title:    Old Cotswold Legbar
-  id:       191432275
-  location: Rogue Studios
-  date:     '2015-02-11'
+- title:       Old Cotswold Legbar
+  id:          191432275
+  location:    Rogue Studios
+  date:        '2015-02-11'
+  license:     Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
-- title:    Not Bernard
-  id:       190803089
-  location: Rogue Studios
-  date:     '2015-02-11'
+- title:       Not Bernard
+  id:          190803089
+  location:    Rogue Studios
+  date:        '2015-02-11'
+  license:     Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
-- title:    Safety On Board
-  id:       174628735
-  location: Enterprise Studios
-  date:     '2014-10-14'
+- title:       Safety On Board
+  id:          174628735
+  location:    Enterprise Studios
+  date:        '2014-10-14'
+  license:     Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
-- title:    Funk Taxi Berlin
-  id:       174065916
-  location: Enterprise Studios
-  date:     '2014-10-14'
+- title:       Funk Taxi Berlin
+  id:          174065916
+  location:    Enterprise Studios
+  date:        '2014-10-14'
+  license:     Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 
 # Sorry, you will not currently be shown
-- title:    Aquamarine
-  id:       132829451
-  location: Unknown
-  date:     '1970-01-01'
+- title:       Aquamarine
+  id:          132829451
+  location:    Unknown
+  date:        '1970-01-01'
 
-- title:    Siren
-  id:       160530965
-  location: Unknown
-  date:     '1970-01-01'
+- title:       Siren
+  id:          160530965
+  location:    Unknown
+  date:        '1970-01-01'
 
-- title:    Trapped In Hawaii
-  id:       162634747
-  location: Unknown
-  date:     '1970-01-01'
+- title:       Trapped In Hawaii
+  id:          162634747
+  location:    Unknown
+  date:        '1970-01-01'
 
-- title:    Carpet Burns
-  id:       174065282
-  location: Unknown
-  date:     '1970-01-01'
+- title:       Carpet Burns
+  id:          174065282
+  location:    Unknown
+  date:        '1970-01-01'
