We now publish software too

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -19,7 +19,7 @@
   fontawesome: fa-flickr
 
 - title:       Github
-  url:         https://github.com/rawfunkmaharishi/rawfunkmaharishi.github.io
+  url:         https://github.com/rawfunkmaharishi/
   fontawesome: fa-github
 
 - title:       Developer blog
