--- a/_data/reviews.yml
+++ b/_data/reviews.yml
@@ -3,3 +3,6 @@
 
 - quote:    Ambient Jazz-Funk
   source:   Kitty, <a href='http://sam.pikesley.org/'>Sam</a>'s girlfriend
+
+- quote:    <a href='https://twitter.com/catallaxer/status/572134901018959872'>Uncommonly good driving music</a>
+  source:   <a href='https://twitter.com'>@catallaxer</a>, on Twitter
