--- a/_data/flickr.yaml
+++ b/_data/flickr.yaml
@@ -1,123 +1,140 @@
 ---
-# Islington Academy
-- photo_page: https://www.flickr.com/photos/cluttercup/15950875724/
-  title: Islington Academy session
+- title: Raw Funk Maharishi
+  date: '2015-02-18'
+  photo_page: https://www.flickr.com/photos/cluttercup/15950875724/
   photo_url: https://farm8.staticflickr.com/7398/15950875724_23d58be214_m.jpg
   license: Attribution-NonCommercial
   license_url: https://creativecommons.org/licenses/by-nc/2.0/
   photographer: jane
-- photo_page: https://www.flickr.com/photos/cluttercup/16579675721/
-  title: Islington Academy session
+- title: Raw Funk Maharishi
+  date: '2015-02-18'
+  photo_page: https://www.flickr.com/photos/cluttercup/16579675721/
   photo_url: https://farm8.staticflickr.com/7418/16579675721_f765c42f99_m.jpg
   license: Attribution-NonCommercial
   license_url: https://creativecommons.org/licenses/by-nc/2.0/
   photographer: jane
-- photo_page: https://www.flickr.com/photos/cluttercup/16393865760/
-  title: Islington Academy session
+- title: Raw Funk Maharishi
+  date: '2015-02-18'
+  photo_page: https://www.flickr.com/photos/cluttercup/16393865760/
   photo_url: https://farm8.staticflickr.com/7395/16393865760_bfbfc1c267_m.jpg
   license: Attribution-NonCommercial
   license_url: https://creativecommons.org/licenses/by-nc/2.0/
   photographer: jane
-- photo_page: https://www.flickr.com/photos/cluttercup/15958752984/
-  title: Islington Academy session
+- title: Raw Funk Maharishi
+  date: '2015-02-18'
+  photo_page: https://www.flickr.com/photos/cluttercup/15958752984/
   photo_url: https://farm9.staticflickr.com/8658/15958752984_25fa81f121_m.jpg
   license: Attribution-NonCommercial
   license_url: https://creativecommons.org/licenses/by-nc/2.0/
   photographer: jane
-- photo_page: https://www.flickr.com/photos/cluttercup/16395047119/
-  title: Islington Academy session
+- title: Raw Funk Maharishi
+  date: '2015-02-18'
+  photo_page: https://www.flickr.com/photos/cluttercup/16395047119/
   photo_url: https://farm9.staticflickr.com/8608/16395047119_942a0f35b1_m.jpg
   license: Attribution-NonCommercial
   license_url: https://creativecommons.org/licenses/by-nc/2.0/
   photographer: jane
-
-# The Comedy
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15010630514/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15010630514/
   photo_url: https://farm6.staticflickr.com/5602/15010630514_0e44c0dfc4_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15011213833/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15011213833/
   photo_url: https://farm6.staticflickr.com/5612/15011213833_3d7c10b42d_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445789720/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445789720/
   photo_url: https://farm6.staticflickr.com/5616/15445789720_89fdbc98a6_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444724049/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444724049/
   photo_url: https://farm4.staticflickr.com/3946/15444724049_1281b5890a_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444839959/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15444839959/
   photo_url: https://farm6.staticflickr.com/5598/15444839959_787064e003_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445504487/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445504487/
   photo_url: https://farm4.staticflickr.com/3956/15445504487_2b11ee4c80_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445493727/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445493727/
   photo_url: https://farm4.staticflickr.com/3953/15445493727_118b0a436b_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631479625/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631479625/
   photo_url: https://farm4.staticflickr.com/3933/15631479625_b6168ee903_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445376017/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445376017/
   photo_url: https://farm6.staticflickr.com/5602/15445376017_594364f209_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445769330/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15445769330/
   photo_url: https://farm4.staticflickr.com/3937/15445769330_df00451025_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15607642076/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15607642076/
   photo_url: https://farm6.staticflickr.com/5611/15607642076_f358eb9331_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15632187102/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15632187102/
   photo_url: https://farm4.staticflickr.com/3935/15632187102_245b50a92f_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631338195/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15631338195/
   photo_url: https://farm6.staticflickr.com/5606/15631338195_1dce26279b_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15628658301/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15628658301/
   photo_url: https://farm6.staticflickr.com/5609/15628658301_16132cf4ff_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
   photographer: kim
-- photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15011139813/
-  title: The Comedy, October 2014
+- title: The Comedy, October 2014
+  date: '2014-10-22'
+  photo_page: https://www.flickr.com/photos/rawfunkmaharishi/15011139813/
   photo_url: https://farm4.staticflickr.com/3956/15011139813_24453e4922_m.jpg
   license: Attribution-NonCommercial-ShareAlike
   license_url: https://creativecommons.org/licenses/by-nc-sa/2.0/
