--- a/_config/purdie.yaml
+++ b/_config/purdie.yaml
@@ -1,4 +1,4 @@
-photographer-lookups:
+photographer_lookups:
   cluttercup: jane
 
-default-title: Raw Funk Maharishi
+default_title: Raw Funk Maharishi
