--- a/_data/photographers.yml
+++ b/_data/photographers.yml
@@ -1,5 +1,5 @@
 kim:
   website: http://www.kimberlycabbott.com/
 
-jane:
-  website: https://twitter.com/cluttercup
+cluttercup:
+  website: https://www.flickr.com/photos/cluttercup
