--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,10 @@
 ---
+- title: Tortoise Stampede
+  id: 197173771
+  location: Rogue Studios
+  date: '2015-03-11'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Bernard
   id: 192841052
   location: Islington Academy
