--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,11 @@
 ---
+- title: Glockenspiel
+  id: 200762822
+  location: |
+    Rogue Studios
+  date: '2015-04-09'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Tortoise Stampede
   id: 197173771
   location: Rogue Studios
