--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,10 @@
 ---
+- title: Slinky
+  id: 207827985
+  location: Rooz Studios
+  date: '2015-05-19'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Glockenspiel
   id: 200762822
   location: |
