--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,10 @@
 ---
+- title: Made In Hong Kong
+  id: 207833308
+  location: Rooz Studios
+  date: '2015-05-19'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Slinky
   id: 207827985
   location: Rooz Studios
