--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,12 +1,12 @@
 ---
-- title: Made In Hong Kong
-  id: 207833308
-  location: Rooz Studios
-  date: '2015-05-19'
+- title: Slinky
+  id: 209339459
+  location: Rogue Studios
+  date: '2015-06-03'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Slinky
-  id: 207827985
+- title: Made In Hong Kong
+  id: 207833308
   location: Rooz Studios
   date: '2015-05-19'
   license: Attribution-NonCommercial-ShareAlike
