--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,10 @@
 ---
+- title: Don The Crown
+  id: 215498338
+  location: Rogue Studios
+  date: '2015-07-13'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Slinky
   id: 209339459
   location: Rogue Studios
