To keep HTML Proofer happy

--- a/_data/photographers.yml
+++ b/_data/photographers.yml
@@ -5,4 +5,4 @@ jane:
   website: https://www.flickr.com/photos/cluttercup
 
 sam:
-#  website: https://www.flickr.com/photos/cluttercup
+  website: '#'
