--- a/_data/vimeo.yaml
+++ b/_data/vimeo.yaml
@@ -1,4 +1,8 @@
 ---
+- title: Vilamendhoo 2015
+  id: 141292006
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/3.0/
 - title: Bernard
   id: 117102891
   license: Attribution-NonCommercial-ShareAlike
