These should be independent, maybe

--- a/_data/attributes.yml
+++ b/_data/attributes.yml
@@ -1,1 +1,3 @@
-strapline: Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
+strapline:
+  standard: Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
+  opengraph: exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
