--- a/gigs/_posts/2015-11-23-hoxton-underbelly.yml
+++ b/gigs/_posts/2015-11-23-hoxton-underbelly.yml
@@ -3,4 +3,5 @@ location:    Zigfrid von Underbelly, 11 Hoxton Square, N1 6NU
 time:        '21:00'
 latitude:    51.527817
 longitude:   -0.08171
+facebook_id: 189953748009166
 ---
