--- a/_data/reviews.yml
+++ b/_data/reviews.yml
@@ -6,3 +6,6 @@
 
 - quote:    <a href='https://twitter.com/catallaxer/status/572134901018959872'>Uncommonly good driving music</a>
   source:   <a href='https://twitter.com'>@catallaxer</a>, on Twitter
+
+- quote:    What Herbie Hancock would sound like if he was a 3-piece band
+  source:   Guitarist from the Dead Frets
