New DTC from Rogue Sessions

--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,14 +1,15 @@
 ---
-- title: Plimsole
-  id: 217587811
+- title: Don The Crown
+  id: 234830006
   location: Rogue Studios
-  date: '2015-07-30'
+  date: '2015-11-25'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Don The Crown
-  id: 215498338
-  location: Rogue Studios
-  date: '2015-07-13'
+- title: Plimsole
+  id: 217587811
+  location: |
+    Rogue Studios
+  date: '2015-07-30'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Slinky
