--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -5,6 +5,7 @@
   date: '2015-11-25'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
+  engineer: Alessio
 - title: Plimsole
   id: 217587811
   location: |
