Different map styles

--- a/_data/attributes.yml
+++ b/_data/attributes.yml
@@ -1,3 +1,5 @@
 strapline:
   standard: Exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
   opengraph: exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
+
+map_tiles: Pioneer
