--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,4 +1,11 @@
 ---
+- title: Slinky
+  id: 236917458
+  location: Rogue Studios
+  engineer: Alessio
+  date: '2015-11-25'
+  license: Attribution-NonCommercial-ShareAlike
+  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Don The Crown
   id: 234830006
   location: Rogue Studios
@@ -11,12 +18,6 @@
   location: |
     Rogue Studios
   date: '2015-07-30'
-  license: Attribution-NonCommercial-ShareAlike
-  license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
-- title: Slinky
-  id: 209339459
-  location: Rogue Studios
-  date: '2015-06-03'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Made In Hong Kong
