Divs with years

--- a/_data/attributes.yml
+++ b/_data/attributes.yml
@@ -3,3 +3,5 @@ strapline:
   opengraph: exploring the deep funk grooves of the 70s, fused with improvised avant-groove jams
 
 #map_tiles: Pioneer
+
+current_year: 2015
