--- a/_data/soundcloud.yaml
+++ b/_data/soundcloud.yaml
@@ -1,6 +1,7 @@
 ---
 - title: Slinky
   id: 236917458
+  url: http://soundcloud.com/rawfunkmaharishi/slinky-2
   location: Rogue Studios
   engineer: Alessio
   date: '2015-11-25'
@@ -8,6 +9,7 @@
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Don The Crown
   id: 234830006
+  url: http://soundcloud.com/rawfunkmaharishi/don-the-crown-1
   location: Rogue Studios
   engineer: Alessio
   date: '2015-11-25'
@@ -15,6 +17,7 @@
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Plimsole
   id: 217587811
+  url: http://soundcloud.com/rawfunkmaharishi/plimsole
   location: |
     Rogue Studios
   date: '2015-07-30'
@@ -22,12 +25,14 @@
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Made In Hong Kong
   id: 207833308
+  url: http://soundcloud.com/rawfunkmaharishi/made-in-hong-kong
   location: Rooz Studios
   date: '2015-05-19'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Glockenspiel
   id: 200762822
+  url: http://soundcloud.com/rawfunkmaharishi/glockenspiel
   location: |
     Rogue Studios
   date: '2015-04-09'
@@ -35,66 +40,77 @@
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Tortoise Stampede
   id: 197173771
+  url: http://soundcloud.com/rawfunkmaharishi/tortoise-stampede
   location: Rogue Studios
   date: '2015-03-11'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Bernard
   id: 192841052
+  url: http://soundcloud.com/rawfunkmaharishi/bernard
   location: Islington Academy
   date: '2015-02-18'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Junalbandi
   id: 193005357
+  url: http://soundcloud.com/rawfunkmaharishi/junalbandi-3
   location: Islington Academy
   date: '2015-02-18'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Beer, Of Course, But Why
   id: 193006525
+  url: http://soundcloud.com/rawfunkmaharishi/beer-of-course-but-why
   location: Islington Academy
   date: '2015-02-18'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Hexaflexagon
   id: 193008299
+  url: http://soundcloud.com/rawfunkmaharishi/hexaflexagon-1
   location: Islington Academy
   date: '2015-02-18'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Jessica's Cousin
   id: 191308336
+  url: http://soundcloud.com/rawfunkmaharishi/jessicas-cousin
   location: Rogue Studios
   date: '2015-02-11'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Old Cotswold Legbar
   id: 191432275
+  url: http://soundcloud.com/rawfunkmaharishi/old-cotswold-legbar-1
   location: Rogue Studios
   date: '2015-02-11'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Not Bernard
   id: 190803089
+  url: http://soundcloud.com/rawfunkmaharishi/not-bernard
   location: Rogue Studios
   date: '2015-02-11'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Safety On Board
   id: 174628735
+  url: http://soundcloud.com/rawfunkmaharishi/safety-on-board
   location: Enterprise Studios
   date: '2014-10-14'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Funk Taxi Berlin
   id: 174065916
+  url: http://soundcloud.com/rawfunkmaharishi/funk-taxi-berlin
   location: Enterprise Studios
   date: '2014-10-14'
   license: Attribution-NonCommercial-ShareAlike
   license_url: http://creativecommons.org/licenses/by-nc-sa/4.0/
 - title: Trapped In Hawaii (feat. Kim)
   id: 162634747
+  url: http://soundcloud.com/rawfunkmaharishi/trapped-in-hawaii-feat-kim
   location: Enterprise Studios
   date: '2014-08-05'
   license: Attribution-NonCommercial-ShareAlike
