Words about JSON

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -25,3 +25,7 @@
 - title:       Developer blog
   url:         /blog/
   fontawesome: fa-code
+
+- title:       Data API
+  url:         http://data.rawfunkmaharishi.uk/
+  fontawesome: fa-database
